--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-    <link rel=stylesheet href="./assets/style.css">
+    <link rel=stylesheet href="../templates/style.css">
 
 </head>
 
